Updated general structure
Added some todos to structure everything
Added some more methods in the new classes
Marked deprecated methods and classes
Fixed warnings
Handled HTTP request errors